[tool.poetry]
name = "sub-encoder"
version = "0.1.0"
description = "A script to encode SRT subtitles into video files."
authors = ["Jan-Niklas Schneider <schneider.janniklas@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/schneiderjan/sub_encoder"  
repository = "https://github.com/schneiderjan/sub_encoder"
keywords = ["ffmpeg", "video", "subtitles", "srt", "encoder"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.11"
ffmpeg-python = "*"
opencv-python = "*"
numpy = "*"

[tool.poetry.scripts]
encode-srt = "srt_encoder.encode_srt:main"

[[tool.poetry.packages]]
include = "srt_encoder"
from = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
