[tool.poetry]
name = "sub-encoder"
version = "0.1.0"
description = "A script to encode SRT subtitles into video files."
authors = ["Jan-Niklas Schneider <schneider.janniklas@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/schneiderjan/sub_encoder"  
repository = "https://github.com/schneiderjan/sub_encoder"
keywords = ["ffmpeg", "video", "subtitles", "srt", "encoder"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [{ include = "src", from = "." }]  # Explicitly declare the package
changelog = "CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg-python = "^2.0.12" 

[tool.poetry.scripts]
sub-encoder = "src.encode_srt:encode_srt"